# SDL3

./: .gitignore
SDL_transparant/: CMakeLists.txt  buildWindow.sh  common.hpp  main.cpp  mingw-toolchain.cmake
SDL_transparant/Assets/: config.json  music.db
SDL_transparant/Code/: CMakeLists.txt  common.hpp  config.json  main.cpp
SDL_transparant/Code/AudioPlayer/: AudioPlayer.cpp  AudioPlayer.hpp  MiniAudioAddon.cpp  MiniAudioAddon.hpp
SDL_transparant/Code/Utilities/: FileManipulation.cpp  FileManipulation.hpp  SDL3_PLUS.cpp  SDL3_PLUS.hpp  SqliteAddon.cpp  SqliteAddon.hpp
SDL_transparant/Code/Utilities/InitialConfiguration/: Setup.cpp  Setup.hpp
SDL_transparant/Utilities/: FileManipulation.cpp  FileManipulation.hpp  SDL3_PLUS.cpp
SDL_transparant/Utilities/InitialConfiguration/: Setup.cpp
SDL_transparant/build-win/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
SDL_transparant/build-win/Code/: Makefile  cmake_install.cmake
